--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
 ]
 description = 'Tools and components for building customized and consistent small-scale Flask applications.'
 license = { text = 'GNU GPLv3' }
-requires-python = '>=3.10,<=3.12'
+requires-python = '>=3.10,<3.13'
 dependencies = [
   'Flask>=2.2.2',
   'gunicorn>=23.0.0',
