--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ requires-python = '>=3.10'
 dependencies = [
   'Flask>=2.2.2',
   'gunicorn>=23.0.0',
-  'SQLAlchemy>=2.0.0,<2.0.38',
+  'SQLAlchemy>=2.0.0',
   'sqlalchemy-views>=0.3.2',
   'pytest>=8.4.1',
 ]
