--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ description = 'Tools and components for building customized and consistent small
 license = { text = 'GNU GPLv3' }
 requires-python = '>=3.10'
 dependencies = [
+  'beautifulsoup4>=4.14.2',
   'click>=8.2.0,<8.3',
   'Flask>=2.2.2',
   'gunicorn>=23.0.0',
